--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
+    "@supabase/supabase-js": "^2.10.0",
+    "@tailwindui/react": "^0.1.1",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
